# telegram-onedrive

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Pipfile  README.md  auth_server.py  bot.py  docker-compose.yml  index.html  log.py  main.py  onedrive.py  onedrive_large_file_uploader.py  run.sh
.github/workflows/: docker-publish.yml
lib/proc_macros/: Cargo.toml
lib/proc_macros/src/: lib.rs
lint/check/: Cargo.toml
lint/check/src/: main.rs
lint/unused_await/: Cargo.toml
lint/unused_await/src/: lib.rs
modules/: client.py  dot_t2o.py  env.py  global_var.py  log.py  mime.py  onedrive.py  res.py  transfer.py  utils.py
modules/handlers/: add_drive.py  add_user.py  auth.py  auto_delete.py  change_drive.py  change_user.py  clear.py  clear_logs.py  dir.py  drive.py  help.py  links.py  list_drive.py  list_user.py  logout.py  logs.py  magnet.py  start.py  transfer.py  url.py
modules/onedrive/: __init__.py  _rewrite.py  database.py  dir.py  session.py  utils.py
server/: auth_server.py
server/ssl/: server.crt  server.key
server/templates/: tg_code.html
src/: env.rs  error.rs  extractor.rs  listener.rs  main.rs  message.rs  models.rs  state.rs  trace.rs  utils.rs
src/auth_server/: auto_abort.rs  cert.rs  mod.rs  var.rs
src/auth_server/handlers/: mod.rs  models.rs  onedrive.rs  telegram.rs
src/client/: ext.rs  mod.rs  socketio.rs  telegram_bot.rs  telegram_user.rs  utils.rs
src/client/onedrive/: dir.rs  drive.rs  invalid_name.rs  mod.rs  upload.rs  utils.rs
src/client/onedrive/session/: mod.rs
src/client/onedrive/session/models/: current_user.rs  mod.rs  session.rs
src/client/telegram/: file.rs  message.rs  mod.rs
src/env/: mod.rs  onedrive.rs  telegram_bot.rs  telegram_user.rs  utils.rs  var.rs
src/handlers/: auth.rs  auto_delete.rs  batch.rs  clear.rs  dir.rs  docs.rs  drive.rs  file.rs  help.rs  link.rs  links.rs  logs.rs  mod.rs  start.rs  test_edit.rs  url.rs  utils.rs  var.rs  version.rs
src/handlers/auth/: mod.rs  onedrive.rs  telegram.rs
src/handlers/auto_delete/: docs.rs  mod.rs
src/handlers/clear/: mod.rs
src/handlers/dir/: docs.rs  mod.rs  reset.rs  set.rs  show.rs  utils.rs
src/handlers/drive/: add.rs  docs.rs  logout.rs  mod.rs  set.rs  show.rs
src/handlers/help/: docs.rs  mod.rs
src/handlers/logs/: clear.rs  docs.rs  mod.rs  send.rs
src/handlers/start/: docs.rs  mod.rs
src/handlers/utils/: message.rs  mod.rs  text.rs  upload.rs  zip.rs
src/listener/: events.rs  handler.rs  mod.rs
src/macros/: docs.rs  mod.rs
src/progresser/: mod.rs  progress.rs
src/tasker/: mod.rs  progress.rs  session.rs  tasks.rs  transfer.rs  var.rs
src/tasker/handlers/: file.rs  mod.rs  url.rs
src/trace/: cleaner.rs  formatter.rs  indenter.rs  mod.rs  visitor.rs
templates/: tg_code.html
