[package]
name = "telegram-onedrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*", "lint/*"]

[lints.clippy]
result_large_err = "allow"
too_many_arguments = "allow"
let_unit_value = "allow"
redundant_closure_call = "allow"
needless_pass_by_ref_mut = "allow"           # TODO
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
uninlined_format_args = "allow"
cast_possible_wrap = "allow"
single_match_else = "allow"
cast_possible_truncation = "allow"
redundant_closure_for_method_calls = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
struct_field_names = "allow"
unreadable_literal = "allow"
too_many_lines = "allow"
nursery = { level = "warn", priority = -1 }
significant_drop_tightening = "allow"
future_not_send = "allow"
derive_partial_eq_without_eq = "allow"
missing_const_for_fn = "allow"
option_if_let_else = "allow"

[workspace.metadata.dylint]
libraries = [{ path = "./lint", pattern = "unused_await" }]

[profile.dev]
incremental = true

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 'z'

[dependencies]
proc_macros = { path = "./lib/proc_macros" }
axum = { version = "0.7.5", default-features = false, features = [
    "tokio",
    "http1",
    "json",
    "query",
    "macros",
] }
axum-server = { version = "0.6.0", default-features = false, features = [
    "tls-rustls",
] }
chrono = { version = "0.4.38", default-features = false }
futures = { version = "0.3.30", default-features = false }
grammers-client = { git = "https://github.com/Lonami/grammers.git", rev = "b20b7e0fa88a1e39ce2b1f7b2490bae7b8933a0e", default-features = false, features = [
    "html",
] }
onedrive-api = { version = "0.10.0", default-features = false }
pico-args = { version = "0.5.0", default-features = false, features = [
    "short-space-opt",
] }
rust_socketio = { version = "0.6.0", default-features = false, features = [
    "async",
] }
socketioxide = { version = "0.14.0", default-features = false }
serde = { version = "1.0.203", default-features = false }
serde_json = { version = "1.0.118", default-features = false }
tokio = { version = "1.38.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "fs",
] }
tracing = { version = "0.1.40", default-features = false }
tracing-appender = { version = "0.2.3", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "env-filter",
    "chrono",
] }
tracing-log = { version = "0.2.0", default-features = false, features = [
    "std",
    "log-tracer",
] }
sea-orm = { version = "0.12.15", default-features = false, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
rcgen = { version = "0.13.1", default-features = false, features = [
    "crypto",
    "ring",
    "pem",
] }
native-tls = { version = "0.2.12", default-features = false }
regex = { version = "1.10.5", default-features = false }
url = { version = "2.5.2", default-features = false }
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
mime_guess = { version = "2.0.5", default-features = false }
percent-encoding = { version = "2.3.1", default-features = false }
path-slash = { version = "0.2.1", default-features = false }
ansi_term = { version = "0.12.1", default-features = false }
du = { version = "0.1.1", default-features = false }
zip = { version = "2.1.5", default-features = false, features = ["time"] }
rand = { version = "0.8.5", default-features = false }
