[package]
name = "telegram-onedrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]

[lints.clippy]
let_unit_value = "allow"
redundant_closure_call = "allow"
pedantic = { level = "warn", priority = -1 }
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
module_name_repetitions = "allow"
redundant_closure_for_method_calls = "allow"
struct_field_names = "allow"
uninlined_format_args = "allow"
unreadable_literal = "allow"
nursery = { level = "warn", priority = -1 }
derive_partial_eq_without_eq = "allow"
future_not_send = "allow"
significant_drop_tightening = "allow"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
strip = true

[dependencies]
proc_macros = { path = "./lib/proc_macros" }
axum = { version = "0.7.5", default-features = false, features = [
    "tokio",
    "http1",
    "json",
    "query",
    "macros",
] }
axum-server = { version = "0.6.0", default-features = false, features = [
    "tls-rustls",
] }
ansi_term = { version = "0.12.1", default-features = false }
chrono = { version = "0.4.38", default-features = false }
du = { version = "0.1.1", default-features = false }
futures = { version = "0.3.30", default-features = false }
grammers-client = { git = "https://github.com/Lonami/grammers.git", rev = "b20b7e0fa88a1e39ce2b1f7b2490bae7b8933a0e", default-features = false, features = [
    "html",
] }
mime_guess = { version = "2.0.5", default-features = false }
onedrive-api = { version = "0.10.0", default-features = false }
percent-encoding = { version = "2.3.1", default-features = false }
path-slash = { version = "0.2.1", default-features = false }
rcgen = { version = "0.13.1", default-features = false, features = [
    "crypto",
    "ring",
    "pem",
] }
regex = { version = "1.10.5", default-features = false }
reqwest = { version = "0.12.5", default-features = false, features = [
    "native-tls",
    "stream",
] }
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
] }
serde = { version = "1.0.203", default-features = false }
serde_json = { version = "1.0.118", default-features = false }
sea-orm = { version = "0.12.15", default-features = false, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
tokio = { version = "1.38.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "fs",
] }
tokio-util = { version = "0.7.12", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-appender = { version = "0.2.3", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "env-filter",
    "chrono",
] }
tracing-log = { version = "0.2.0", default-features = false, features = [
    "std",
    "log-tracer",
] }
url = { version = "2.5.2", default-features = false }
zip = { version = "2.1.5", default-features = false, features = ["time"] }
